# reproit

./: .editorconfig  .forbidden-terms.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  SPEC.md  SUPPORT.md  action.README.md  action.yml  install.ps1  install.sh  nul  reproit.example.yaml  signature_vectors.json  tui_signature_vectors.json
.githooks/: pre-push
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs  providers.rs
crates/llm/src/claude/: client.rs  error.rs  mod.rs  runner.rs  stream.rs  types.rs
crates/reproit/: Cargo.toml  build.rs  oracle-registry.json
crates/reproit/scaffolds/flutter/integration_test/: journey_explore.dart  reproit_explorer.dart
crates/reproit/scaffolds/flutter/test/: fuzz_headless_test.dart
crates/reproit/src/: auth.rs  backend_contracts.rs  capsule.rs  config.rs  crashreporter.rs  crosscut.rs  exec.rs  init.rs  junit.rs  layout.rs  lib.rs  main.rs  mcp.rs  perf_bench.rs  skills.rs  update.rs
crates/reproit/src/adapters/: cloud_profile.rs  crash_reporter.rs  credentials.rs  device.rs  drive.rs  frames.rs  inspect_control.rs  mod.rs  orchestrator.rs  platform.rs  reset.rs  scoped_env.rs  simctl.rs
crates/reproit/src/adapters/atspi/: actions.rs  capture.rs  mod.rs  session.rs
crates/reproit/src/adapters/config/: loader.rs  mod.rs  route_access_tests.rs  synthesis.rs  web_runner.rs
crates/reproit/src/adapters/orchestrator/: tests.rs  watch.rs
crates/reproit/src/adapters/project_scaffold/: backend_detect.rs  mod.rs  tests.rs
crates/reproit/src/adapters/tui/: action.rs  capture.rs  dead_input.rs  fuzz_config.rs  interaction.rs  invariants.rs  mod.rs  scenario.rs  screen.rs  shot.rs  tests.rs
crates/reproit/src/adapters/uia/: capture.rs  config.rs  mod.rs  oracle.rs  scenario.rs  tests.rs
crates/reproit/src/backends/: atspi.rs  drive.rs  frames.rs  mod.rs  orchestrator.rs  platform.rs  reset.rs  simctl.rs  tui.rs  tui_shot.rs  uia.rs  vmservice.rs
crates/reproit/src/backends/atspi/: capture.rs  mod.rs  protocol.rs  session.rs
crates/reproit/src/backends/tui/: capture.rs  fuzz_config.rs  invariants.rs  mod.rs  scenario.rs  screen.rs  session.rs  shot.rs
crates/reproit/src/backends/uia/: action.rs  exploration.rs  mod.rs
crates/reproit/src/capsule/: causal_graph.rs  crypto.rs  environment.rs  matching.rs  redaction.rs  tests.rs
crates/reproit/src/cli/: args.rs  context.rs  rewrite.rs
crates/reproit/src/commands/: auth.rs  authored_contract.rs  backend_target.rs  capture.rs  change_selection.rs  check.rs  cloud.rs  create_command.rs  device.rs  doctor.rs  fuzz_command.rs  map.rs  mod.rs  proof.rs  record.rs  record_command.rs  repro.rs  reset.rs  scan_command.rs  tests.rs
crates/reproit/src/config/: loader.rs  mod.rs  synthesis.rs  web_runner.rs
crates/reproit/src/crosscut/: device.rs  mod.rs  oracle.rs
crates/reproit/src/domain/: appmap.rs  authority.rs  boundary_tests.rs  candidate.rs  contracts.rs  evidence.rs  fault.rs  fixture.rs  hash.rs  locale.rs  mod.rs  observation.rs  oracle.rs  overflow.rs  repro.rs  route_access.rs  runner.rs  signature.rs  target.rs
crates/reproit/src/infra/: mod.rs
crates/reproit/src/interface/: mod.rs
crates/reproit/src/mcp/: dispatch.rs
crates/reproit/src/model/: accessibility.rs  appmap.rs  attribute.rs  backend.rs  candidate.rs  contracts.rs  evidence.rs  fixture.rs  invariants.rs  map.rs  mod.rs  observation.rs  repro.rs  runner.rs  signature.rs
crates/reproit/src/modes/: a2ui.rs  analyze.rs  backend_headless.rs  barrier.rs  deliver.rs  fix.rs  flicker.rs  fuzz.rs  graph.rs  import.rs  journey.rs  mapplan.rs  mod.rs  pwfuzz.rs  screenshots.rs  soak.rs  triage.rs  visual.rs
crates/reproit/src/runtime/: mod.rs  process.rs  project_layout.rs  startup.rs  toolchain.rs
crates/reproit/src/workflows/: a2ui.rs  accessibility.rs  analyze.rs  auth.rs  authored_contract.rs  backend_target.rs  capture.rs  change_selection.rs  check.rs  cloud.rs  create_command.rs  deliver.rs  device.rs  doctor.rs  fix.rs  flicker.rs  fuzz_command.rs  graph.rs  import.rs  init_command.rs  inspect.rs  map.rs  mapplan.rs  mod.rs  proof.rs  record.rs  repro.rs  reset.rs  route_access.rs  scan_command.rs  screenshots.rs  skills.rs  soak.rs  tests.rs  visual.rs
crates/reproit/tests/: architecture.rs  barrier_scenario.rs  determinism.rs  framework_smoke.rs
crates/tui-sig/: Cargo.toml
crates/tui-sig/src/: lib.rs
examples/axum-capture-fixture/: Cargo.toml
examples/axum-capture-fixture/src/: main.rs
sdk/reproit-backend-py/: README.md  pyproject.toml
sdk/reproit-backend-py/reproit_backend_py/: __init__.py  asgi.py  capture.py  trace.py
sdk/reproit-backend-py/tests/: test_capture.py  test_e2e.py  test_trace.py
sdk/reproit-backend-rs/: Cargo.toml  README.md
sdk/reproit-backend-rs/src/: actix.rs  axum.rs  capture.rs  framework.rs  lib.rs
sdk/reproit-backend-rs/tests/: actix_middleware.rs  axum_middleware.rs
sdk/reproit-backend-rs/tests/support/: mod.rs
sdk/reproit-linux/: README.md  pyproject.toml
sdk/reproit-linux/reproit_linux/: __init__.py  capture.py  causal.py  reporter.py  signature.py
sdk/reproit-linux/tests/: test_capture.py  test_causal.py  test_context.py  test_invariant.py  test_parity.py  test_protocol.py
sdk/reproit-tauri/: Cargo.toml  README.md  build.rs
sdk/reproit-tauri/permissions/: default.toml
sdk/reproit-tauri/permissions/autogenerated/: reference.md
sdk/reproit-tauri/permissions/schemas/: schema.json
sdk/reproit-tauri/src/: init.js  lib.rs
sdk/reproit-tauri/test/: init.test.mjs
sdk/reproit-tui-py/: README.md  pyproject.toml
sdk/reproit-tui-py/reproit_tui_py/: __init__.py  capture.py  causal.py  reporter.py  signature.py
sdk/reproit-tui-py/tests/: test_causal.py  test_invariant.py  test_parity.py  test_protocol.py
sdk/reproit-tui-rs/: Cargo.toml  README.md
sdk/reproit-tui-rs/src/: lib.rs
sdk/reproit-tui-rs/tests/: parity.rs
validation/backend/oss/: Cargo.toml  README.md  graphql-service.mjs  grpc-dogfood.go  grpc-int64-descriptor.json  process-tree.sh  run.sh
validation/backend/oss/src/: main.rs
(+790 files in other folders)
