[package]
name = "reproit"
version = "0.1.0"
edition = "2021"
description = "Reproducible AI QA: deterministic multi-device test orchestration with evidence capture"

[dependencies]
anyhow = { workspace = true }
llm = { path = "../llm" }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
regex = { workspace = true }
# `multipart` (on top of the workspace defaults) for evidence uploads to the
# cloud's POST /v1/errors/:app/:idx/evidence endpoint.
reqwest = { workspace = true, features = ["multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio-tungstenite = "0.24"
futures-util = "0.3"
tokio = { workspace = true }
# auth vault + TOTP
aes-gcm = "0.10"
rand = "0.8"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
# tui backend: drive terminal apps in a PTY, parse the screen with a VT emulator
portable-pty = "0.8"
vt100 = "0.15"
# canonical TUI screen signature, shared byte-for-byte with the production TUI SDKs
reproit-tui-sig = { path = "../tui-sig" }

[dev-dependencies]
# Property testing (Antithesis Hegel).
hegeltest = "0.14.18"
