[package]
name = "reproit"
version = "0.1.79"
edition = "2021"
description = "Reproducible AI QA: deterministic multi-device test orchestration with evidence capture"

[dependencies]
anyhow = { workspace = true }
llm = { path = "../llm" }
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
regex = { workspace = true }
# `multipart` (on top of the workspace defaults) for evidence uploads to the
# cloud's POST /v1/errors/:app/:idx/evidence endpoint.
reqwest = { workspace = true, features = ["multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
tokio = { workspace = true }
# auth vault + TOTP. getrandom is the OS CSPRNG primitive for salt/nonce/keyfile
# bytes (rand 0.10 dropped rand::rngs::OsRng; getrandom is the canonical source).
aes-gcm = "0.10.3"
getrandom = "0.3"
hmac = "0.13.0"
sha1 = "0.11.0"
sha2 = "0.11.0"
# tui backend: drive terminal apps in a PTY, parse the screen with a VT emulator
portable-pty = "0.9.0"
vt100 = "0.16.2"
# canonical TUI screen signature, shared byte-for-byte with the production TUI SDKs
reproit-tui-sig = { path = "../tui-sig" }

[dev-dependencies]
# Property-based testing.
hegeltest = "0.21.2"
