[package]
name = "reproit-tui-sig"
version = "0.1.0"
edition = "2021"
license = "Elastic-2.0"
description = "Canonical TUI screen signature for reproit: the locale-invariant layout-skeleton hash shared byte-for-byte by the `reproit __tui` runner and the production TUI SDKs."

# No dependencies on purpose: this is a tiny, std-only crate so a production TUI
# app (or its SDK) can depend on it without pulling in the runner, a PTY, or vt100.
[lib]
name = "reproit_tui_sig"
path = "src/lib.rs"
