[package]
name = "reproit-backend"
version = "0.0.0"
edition = "2021"
license.workspace = true
repository.workspace = true
publish = false
description = "Experimental trace-bound service instrumentation for Reproit"

[dependencies]
base64 = "0.22"
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11"

[dev-dependencies]
reproit-protocol.workspace = true
