[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reproit-linux"
version = "0.1.0"
description = "ReproIt production telemetry SDK for native Linux GUI apps (GTK / Qt)."
readme = "README.md"
requires-python = ">=3.9"
# No hard dependency: the signature core + reporter are pure stdlib. The live
# capture uses GObject-Introspection bindings (PyGObject for GTK ATK, the Atspi
# typelib for Qt / bus), which a GTK/Qt app already provides; declared as an
# optional extra so `pip install reproit-linux` stays dependency-free.
dependencies = []

[project.optional-dependencies]
capture = ["PyGObject>=3.42"]

[tool.setuptools]
packages = ["reproit_linux"]
