[package]
name = "reproit-backend-oss-gate"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
anyhow = "1"
chrono = "0.4"
graphql-parser = "0.4"
prost-types = "0.14"
protox = "0.9.1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
